Fix the longevity bar width alignment issue and updated the income rider form submit function to display the API response error in toast message

--- a/src/assets/css/retirement-buffer/style.css
+++ b/src/assets/css/retirement-buffer/style.css
@@ -2111,3 +2111,20 @@ background: #DFDFDF;
     height: calc(100vh - 260px);
     overflow-y: auto;
 }
+
+.bottom-numbers {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.all-number-div {
+    position: relative;
+    height: 28px;
+}
+
+.all-number-div-span {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+}
